--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+# Railsで定数設定ファイルをgitから外して管理する方法。 - logs
+# http://yss44.hatenablog.com/entry/2013/11/30/135446
+config/setting.yml
